<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kixeye.chassis</groupId>
    <artifactId>template-service</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>Java Service Template</name>

    <properties>
        <!-- Main Dependencies -->
        <slf4j.version>1.7.5</slf4j.version>
        <spring.version>4.0.4.RELEASE</spring.version>

        <chassis.version>1.0.0-SNAPSHOT</chassis.version>

        <!-- Tests -->
        <junit.version>4.11</junit.version>

        <!-- Install -->
        <jre.version>7u45</jre.version>

        <!--
          Used by packer.template. Assumes you'll store your build in a Nexus repo somewhere.
          If this is not the case, you can modify the packer.template to create your server
          images as you'd like
        -->
        <nexus.host>nexus.myorg.org</nexus.host>
    </properties>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>2.6</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.1</version>
                <configuration>
                    <mainClass>com.kixeye.chassis.bootstrap.AppMain</mainClass>
                    <arguments>
                        <argument>-e</argument>
                        <argument>local</argument>
                        <argument>-si</argument>
                    </arguments>
                    <systemProperties>
                        <systemProperty>
                            <key>app.version</key>
                            <value>${project.version}</value>
                        </systemProperty>
                    </systemProperties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <useEditMode>true</useEditMode>
                </configuration>
            </plugin>
            <!-- deploy sources too -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <inherited>true</inherited>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}/packer-template</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/packer</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>attach-artifacts</id>
                        <phase>package</phase>
                        <goals>
                            <goal>attach-artifact</goal>
                        </goals>
                        <configuration>
                            <artifacts>
                                <artifact>
                                    <file>${project.build.outputDirectory}/packer-template/packer.template</file>
                                    <type>template</type>
                                    <classifier>packer</classifier>
                                </artifact>
                            </artifacts>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <attach>true</attach>
                            <descriptors>
                                <descriptor>${basedir}/src/main/assembly/bundle.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.6</version>
                <configuration>
                    <repositoryLayout>flat</repositoryLayout>
                    <configurationDirectory>conf</configurationDirectory>
                    <configurationSourceDirectory>/src/main/conf</configurationSourceDirectory>
                    <target>${project.build.directory}/appassembler</target>
                    <includeConfigurationDirectoryInClasspath>false</includeConfigurationDirectoryInClasspath>
                    <environmentSetupFileName>configure</environmentSetupFileName>
                    <unixScriptTemplate>
                        ${basedir}/src/main/jsw/unixJswScriptTemplate
                    </unixScriptTemplate>
                    <defaultJvmSettings>
                        <extraArguments>
                            <extraArgument>
                                -javaagent:/opt/kixeye/${pom.artifactId}/lib/spring-instrument-${spring.version}.jar
                            </extraArgument>
                            <extraArgument>-server</extraArgument>
                            <extraArgument>-XX:+PrintFlagsFinal</extraArgument>
                            <extraArgument>-XX:+UseParallelGC</extraArgument>
                            <extraArgument>-XX:+AggressiveOpts</extraArgument>
                            <extraArgument>-XX:+UseFastAccessorMethods</extraArgument>
                            <extraArgument>-Dcom.sun.management.jmxremote=true</extraArgument>
                            <extraArgument>-Dcom.sun.management.jmxremote.ssl=false</extraArgument>
                            <extraArgument>-Dcom.sun.management.jmxremote.authenticate=false</extraArgument>
                        </extraArguments>
                    </defaultJvmSettings>
                    <daemons>
                        <daemon>
                            <id>${project.artifactId}</id>
                            <mainClass>com.kixeye.core.bootstrap.AppMain</mainClass>
                            <platforms>
                                <platform>jsw</platform>
                            </platforms>
                            <generatorConfigurations>
                                <generatorConfiguration>
                                    <generator>jsw</generator>
                                    <includes>
                                        <include>linux-x86-64</include>
                                    </includes>
                                    <configuration>
                                        <property>
                                            <name>set.default.REPO_DIR</name>
                                            <value>lib</value>
                                        </property>
                                        <property>
                                            <name>wrapper.working.dir</name>
                                            <value>/opt/kixeye/${pom.artifactId}</value>
                                        </property>
                                        <property>
                                            <name>wrapper.startup.timeout</name>
                                            <value>0</value>
                                        </property>
                                        <property>
                                            <name>wrapper.logfile</name>
                                            <value>/var/log/kixeye/${project.artifactId}/wrapper.log</value>
                                        </property>
                                        <property>
                                            <name>run.as.user.envvar</name>
                                            <value>kixeye</value>
                                        </property>
                                        <property>
                                            <name>wrapper.java.initmemory</name>
                                            <value>1024</value>
                                        </property>
                                        <property>
                                            <name>wrapper.java.maxmemory</name>
                                            <value>1024</value>
                                        </property>
                                    </configuration>
                                </generatorConfiguration>
                            </generatorConfigurations>
                        </daemon>
                    </daemons>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-jsw-scripts</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>generate-daemons</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.gmaven</groupId>
                <artifactId>gmaven-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <id>add-dynamic-properties</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                        <configuration>
                            <source>
                                if (project.version.contains("SNAPSHOT")) {
                                    project.properties.repository_name = 'snapshots'
                                } else {
                                    project.properties.repository_name = 'releases'
                                }
                            </source>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <!-- Eliminates some warnings for IDE - doesn't affect the build. -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[2.0,)</versionRange>
                                        <goals>
                                            <goal>copy-dependencies</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore/>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.codehaus.mojo</groupId>
                                        <artifactId>appassembler-maven-plugin</artifactId>
                                        <versionRange>[1.1.1,)</versionRange>
                                        <goals>
                                            <goal>generate-daemons</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore/>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            org.codehaus.gmaven
                                        </groupId>
                                        <artifactId>
                                            gmaven-plugin
                                        </artifactId>
                                        <versionRange>
                                            [1.4,)
                                        </versionRange>
                                        <goals>
                                            <goal>execute</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <!-- Core! -->
        <dependency>
            <groupId>com.kixeye.chassis</groupId>
            <artifactId>chassis-transport-core</artifactId>
            <version>${chassis.version}</version>
        </dependency>
        <dependency>
            <groupId>com.kixeye.chassis</groupId>
            <artifactId>chassis-support</artifactId>
            <version>${chassis.version}</version>
        </dependency>
        <dependency>
            <groupId>com.kixeye.chassis</groupId>
            <artifactId>chassis-bootstrap</artifactId>
            <version>${chassis.version}</version>
        </dependency>

        <!-- Spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-instrument</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>
                https://oss.sonatype.org/content/repositories/snapshots
            </url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
